--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -7,7 +7,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.suwonsmartapp.hello.SecondActivity">
+    tools:context="com.suwonsmartapp.hello.SecondActivity"
+    >
 
     <!-- 1:1:1:1 -->
     <LinearLayout
@@ -79,7 +80,7 @@
             android:background="#33FF3333"
             android:layout_weight="1"
             android:text="텍스트"
-            android:textSize="30sp"
+            android:textSize="30dp"
             android:textColor="#FF0000"
             android:gravity="center"
             android:layout_width="wrap_content"
