--- a/app/src/main/res/layout/activity_image_exam.xml
+++ b/app/src/main/res/layout/activity_image_exam.xml
@@ -50,7 +50,8 @@
 
         <ImageView
             android:id="@+id/img_2"
-            android:src="@drawable/pic300_7"
+            android:src="@drawable/dmyo_2jpg_"
+            android:scaleType="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
