--- a/app/src/main/res/layout/activity_activity_exam.xml
+++ b/app/src/main/res/layout/activity_activity_exam.xml
@@ -32,4 +32,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/dialogBtn"
+        android:text="다이얼로그"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
