--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.suwonsmartapp.hello.event.EventActivity">
+    tools:context="com.suwonsmartapp.hello.event.TouchEventActivity">
 
     <TextView
         android:id="@+id/textView"
