--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.suwonsmartapp.hello.SecondActivity"
+    tools:context="com.suwonsmartapp.hello.activity.SecondActivity"
     >
 
     <!-- 1:1:1:1 -->
