--- a/app/src/main/res/layout/activity_sms.xml
+++ b/app/src/main/res/layout/activity_sms.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.suwonsmartapp.hello.SMSActivity">
+    tools:context="com.suwonsmartapp.hello.activity.SMSActivity">
 
     <EditText
         android:id="@+id/messageEditText"
