소스 정리 - 주석 추가 - 패키지 정리

--- a/app/src/main/res/layout/activity_mission06_main.xml
+++ b/app/src/main/res/layout/activity_mission06_main.xml
@@ -25,6 +25,7 @@
 
         <EditText
             android:id="@+id/addressEditText"
+            android:inputType="textWebEditText"
             android:layout_width="wrap_content"
             android:layout_weight="1"
             android:layout_height="wrap_content" />
