--- a/app/src/main/res/anim/translation.xml
+++ b/app/src/main/res/anim/translation.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="700">
     <alpha
-        android:fromAlpha="1"
-        android:toAlpha="0"
-        android:duration="1000" />
+        android:fromAlpha="0"
+        android:toAlpha="1" />
 
     <translate
-        android:fromYDelta="-100%p"
-        android:toYDelta="0%p"
-        android:duration="1000" />
+        android:fromXDelta="-100%"
+        android:toXDelta="0" />
 </set>
