--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -1,19 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:id="@+id/list_item_bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/list_item_tv"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginBottom="8dp"
+        android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         android:background="#aa0000"
         android:gravity="center_vertical"
-        android:padding="8dp"
+        android:paddingTop="8dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:text="Text"
-        android:textColor="#ddffffff"/>
+        android:textColor="#ddffffff" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="16dp"
+        android:background="#aa0000"
+        android:gravity="center_vertical"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:paddingBottom="8dp">
+
+        <TextView
+            android:layout_weight="1"
+            android:id="@+id/list_item_tv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Text2"
+            android:textColor="#ddffffff" />
+
+        <TextView
+            android:id="@+id/list_item_tv3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Text3"
+            android:textColor="#ddffffff" />
+    </LinearLayout>
+
 </LinearLayout>
