GridView 예제 - adapter.notifyDataSetChanged 데이타 변경 알림 추가

--- a/app/src/main/res/layout/activity_spinner.xml
+++ b/app/src/main/res/layout/activity_spinner.xml
@@ -16,6 +16,8 @@
 
     <Spinner
         android:id="@+id/spinner"
+        android:spinnerMode="dropdown"
+        android:popupBackground="#aaff0000"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
