--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.suwonsmartapp.hello.challenge.CalendarActivity">
+    tools:context="com.suwonsmartapp.hello.challenge.challenge07_08.CalendarActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,27 +48,9 @@
         android:stretchMode="columnWidth"
         android:verticalSpacing="1dp" />
 
-    <LinearLayout
+    <ListView
+        android:id="@+id/lv_schedule"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="일정" />
-
-        <EditText
-            android:id="@+id/edittext_schedule"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <Button
-            android:id="@+id/btn_save_schedule"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="저 장" />
-    </LinearLayout>
+        android:layout_height="150dp" />
 
 </LinearLayout>
