도전 07.08 리팩토링 - GridView 상속하는 CalendarView 생성 - 달력 계산 로직 CalendarAdapter 로 이동

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -37,16 +37,11 @@
 
     </LinearLayout>
 
-    <GridView
+    <com.suwonsmartapp.hello.challenge.challenge07_08.CalendarView
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="@android:color/darker_gray"
-        android:horizontalSpacing="1dp"
-        android:numColumns="7"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="1dp" />
+        android:layout_weight="1" />
 
     <ListView
         android:id="@+id/lv_schedule"
