--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -33,7 +33,7 @@
             android:id="@+id/btn_next_month"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="다음달" />
+            android:text="@string/nextMonth" />
 
     </LinearLayout>
 
