--- a/app/src/main/res/layout/activity_thread.xml
+++ b/app/src/main/res/layout/activity_thread.xml
@@ -47,4 +47,10 @@
         android:layout_height="wrap_content"
         android:text="토스트" />
 
+    <Button
+        android:id="@+id/btn_calculate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="복잡한 계산" />
+
 </LinearLayout>
