JSON Parsing 패키지 수정

--- a/app/src/main/res/layout/activity_parsing.xml
+++ b/app/src/main/res/layout/activity_parsing.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.suwonsmartapp.hello.parsing.ParsingActivity">
+    tools:context="com.suwonsmartapp.hello.parsing_json.ParsingActivity">
 
     <ProgressBar
         android:id="@+id/progress"
