--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.suwonsmartapp.hello.parsing.WebViewActivity">
+    tools:context="com.suwonsmartapp.hello.parsing_json.WebViewActivity">
 
     <WebView
         android:id="@+id/webview_recipe"
