--- a/app/src/main/res/layout/activity_parsing.xml
+++ b/app/src/main/res/layout/activity_parsing.xml
@@ -10,7 +10,7 @@
 
     <ProgressBar
         android:id="@+id/progress"
-        style="?android:progressBarStyleLarge"
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone" />
