--- a/app/src/main/res/menu/menu_db.xml
+++ b/app/src/main/res/menu/menu_db.xml
@@ -1,10 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.suwonsmartapp.hello.save.db.DbActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/action_delete"
+        android:orderInCategory="1"
+        android:title="삭제" />
+
+    <item
+        android:id="@+id/action_update"
+        android:orderInCategory="2"
+        android:title="수정" />
 </menu>
