멀티채팅 서버, 클라이언트 소스 업로드 - 클라이언트에서 메세지 보낼 수 있도록 예제 수정

--- a/app/src/main/res/layout/activity_cilent.xml
+++ b/app/src/main/res/layout/activity_cilent.xml
@@ -10,4 +10,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <EditText
+        android:id="@+id/et_message"
+        android:hint="메세지"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:text="메세지 전송"
+        android:id="@+id/btn_send"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+
+
 </LinearLayout>
