채팅 클라이언트 예제 - 9 패치 이미지 적용

--- a/app/src/main/res/layout/activity_cilent.xml
+++ b/app/src/main/res/layout/activity_cilent.xml
@@ -2,26 +2,37 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#6884B3">
 
-    <Button
-        android:text="서버에 연결"
-        android:id="@+id/btn_connect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:id="@+id/et_message"
-        android:hint="메세지"
+    <ListView
+        android:id="@+id/lv_chat"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:divider="#00000000"
+        android:transcriptMode="alwaysScroll"
+        android:layout_height="0dp" />
 
-    <Button
-        android:text="메세지 전송"
-        android:id="@+id/btn_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:background="#FFFFFF"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <EditText
+            android:id="@+id/et_message"
+            android:hint="메세지"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
 
+        <Button
+            android:background="@drawable/thm_chatroom_button_bg"
+            android:text="전송"
+            android:id="@+id/btn_send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 </LinearLayout>
