리모콘 예제 - AppCompatButton 으로 변경

--- a/app/src/main/res/layout/activity_remote_controller.xml
+++ b/app/src/main/res/layout/activity_remote_controller.xml
@@ -15,7 +15,7 @@
 
         <TableRow>
 
-            <Button
+            <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_up"
                 android:text="UP"
                 android:layout_width="wrap_content"
@@ -24,19 +24,19 @@
         </TableRow>
 
         <TableRow>
-            <Button
+            <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_left"
                 android:text="LEFT"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <Button
+            <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_down"
                 android:text="DOWN"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <Button
+            <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_right"
                 android:text="RIGHT"
                 android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
 
 
 
-    <Button
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/btn_enter"
         android:text="ENTER"
         android:layout_width="wrap_content"
