--- a/app/src/main/res/layout/activity_file_manager.xml
+++ b/app/src/main/res/layout/activity_file_manager.xml
@@ -4,11 +4,19 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.suwonsmartapp.hello.filemanager.FileManagerActivity">
 
     <ListView
         android:id="@+id/lv_filetree"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp" />
+
+    <TextView
+        android:id="@+id/tv_log"
+        android:layout_width="match_parent"
+        android:layout_height="100dp" />
+
 
 </LinearLayout>
