--- a/app/src/main/res/layout/activity_graphic.xml
+++ b/app/src/main/res/layout/activity_graphic.xml
@@ -14,6 +14,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <com.suwonsmartapp.hello.graphic.MusicPlayerView
+        android:id="@+id/musicPlayer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <com.suwonsmartapp.hello.graphic.CustomView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
