--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -15,8 +15,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:textSize="30sp"
-        android:textColor="#ff0000"
+        android:textColor="#ffffff"
         android:padding="10dp"
+        android:shadowColor="#000000"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="2"
         android:text="Header" />
 
 </RelativeLayout>
