--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -2,12 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.suwonsmartapp.hello.activity.ToolbarActivity">
-    <item
-        android:id="@+id/menu_search"
-        android:icon="@android:drawable/ic_menu_search"
-        android:title="@android:string/search_go"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always" />
+    <!--<item-->
+        <!--android:id="@+id/menu_search"-->
+        <!--android:icon="@android:drawable/ic_menu_search"-->
+        <!--android:title="@android:string/search_go"-->
+        <!--app:actionViewClass="android.support.v7.widget.SearchView"-->
+        <!--app:showAsAction="always" />-->
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
