RecyclerView 예제 작성

--- a/app/src/main/res/layout/fragment_cursor_loader_list.xml
+++ b/app/src/main/res/layout/fragment_cursor_loader_list.xml
@@ -1,10 +1,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.suwonsmartapp.hello.loader.CursorLoaderListFragment">
+    tools:context="com.suwonsmartapp.hello.loader.ContactFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="결과가 없음" />
 
 </FrameLayout>
