--- a/app/src/main/res/layout/activity_toolbar.xml
+++ b/app/src/main/res/layout/activity_toolbar.xml
@@ -21,11 +21,10 @@
             android:background="#ff0000"
             android:minHeight="?attr/actionBarSize" />
 
-        <fragment
-            android:id="@+id/fragment_contact"
+        <FrameLayout
+            android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:name="com.suwonsmartapp.hello.loader.CursorLoaderListFragment" />
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
