--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -4,10 +4,14 @@
         <item
             android:id="@+id/navigation_item_1"
             android:icon="@mipmap/ic_launcher"
-            android:title="메뉴 1"/>
+            android:title="연락처"/>
         <item
             android:id="@+id/navigation_item_2"
             android:icon="@mipmap/ic_launcher"
-            android:title="메뉴 2"/>
+            android:title="Drag and Drop"/>
+        <item
+            android:id="@+id/navigation_item_3"
+            android:icon="@mipmap/ic_launcher"
+            android:title="Pull To Refresh"/>
     </group>
 </menu>
