--- a/app/src/main/res/layout/listview_item_movie.xml
+++ b/app/src/main/res/layout/listview_item_movie.xml
@@ -1,40 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
-    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/thumbnail"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:padding="10dp"/>
-
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="200dp"
+        card_view:cardCornerRadius="4dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:id="@+id/cardView">
 
-        <TextView
-            android:textColor="#000000"
-            android:layout_weight="1"
-            android:id="@+id/tv_title"
-            android:textSize="20sp"
-            android:text="내 동영상 #1"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:textColor="#000000"
-            android:layout_weight="1"
-            android:id="@+id/tv_date"
-            android:textSize="20sp"
-            android:text="2011년 08년 02일"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp" />
+            <ImageView
+                android:id="@+id/thumbnail"
+                android:scaleType="centerCrop"
+                android:layout_width="match_parent"
+                android:layout_height="200dp" />
 
-    </LinearLayout>
+            <TextView
+                android:textColor="#ffffff"
+                android:shadowColor="#000000"
+                android:shadowRadius="2"
+                android:id="@+id/tv_title"
+                android:textSize="20sp"
+                android:text="내 동영상 #1"
+                android:layout_alignParentBottom="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:textColor="#ffffff"
+                android:shadowColor="#000000"
+                android:shadowRadius="2"
+                android:id="@+id/tv_date"
+                android:textSize="20sp"
+                android:text="2011년 08년 02일"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <!--<ImageView-->
+        <!--android:id="@+id/thumbnail"-->
+        <!--android:layout_width="100dp"-->
+        <!--android:layout_height="100dp"-->
+        <!--android:padding="10dp"/>-->
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="vertical">-->
+
+        <!--<TextView-->
+            <!--android:textColor="#000000"-->
+            <!--android:layout_weight="1"-->
+            <!--android:id="@+id/tv_title"-->
+            <!--android:textSize="20sp"-->
+            <!--android:text="내 동영상 #1"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="0dp" />-->
+
+        <!--<TextView-->
+            <!--android:textColor="#000000"-->
+            <!--android:layout_weight="1"-->
+            <!--android:id="@+id/tv_date"-->
+            <!--android:textSize="20sp"-->
+            <!--android:text="2011년 08년 02일"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="0dp" />-->
+
+    <!--</LinearLayout>-->
 
 
 </LinearLayout>
