Challenge17에 썸네일 로드 되도록 수정 + 회전시 레이아웃 변경

--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -13,5 +13,10 @@
             android:id="@+id/navigation_item_3"
             android:icon="@mipmap/ic_launcher"
             android:title="Pull To Refresh"/>
+
+        <item
+            android:id="@+id/navigation_item_4"
+            android:icon="@mipmap/ic_launcher"
+            android:title="RecyclerView"/>
     </group>
 </menu>
