--- a/app/src/main/res/layout/fragment_fab.xml
+++ b/app/src/main/res/layout/fragment_fab.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</LinearLayout>
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/fab_position"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <!-- CoordinatorLayout 과 FloatingActionButton 을 조합하면 Snackbar 가 올라올 때 FloatingActionButton 도 올라감 -->
+        <!-- CoordinatorLayout.Behavior 를 FloatingActionButton 이 구현하고 있기 때문 -->
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="12dp"
+            android:src="@android:drawable/ic_input_add" />
+
+
+    </android.support.design.widget.CoordinatorLayout>
+
+
+</FrameLayout>
