--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -28,5 +28,10 @@
             android:id="@+id/navigation_item_6"
             android:icon="@mipmap/ic_launcher"
             android:title="TabLayout"/>
+
+        <item
+            android:id="@+id/navigation_item_7"
+            android:icon="@mipmap/ic_launcher"
+            android:title="CoordinatorLayout"/>
     </group>
 </menu>
