--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -33,5 +33,10 @@
             android:id="@+id/navigation_item_7"
             android:icon="@mipmap/ic_launcher"
             android:title="CoordinatorLayout"/>
+
+        <item
+            android:id="@+id/navigation_item_8"
+            android:icon="@mipmap/ic_launcher"
+            android:title="CollapsingToolbarLayout"/>
     </group>
 </menu>
