CoordinatorLayoutFragment -> AppbarLayoutFragment 로 이름 변경

--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -32,7 +32,7 @@
         <item
             android:id="@+id/navigation_item_7"
             android:icon="@mipmap/ic_launcher"
-            android:title="CoordinatorLayout"/>
+            android:title="AppbarLayout"/>
 
         <item
             android:id="@+id/navigation_item_8"
