Activity Transition 예제 (현재 롤리팝 전용)

--- a/app/src/main/res/layout/listview_item_movie.xml
+++ b/app/src/main/res/layout/listview_item_movie.xml
@@ -22,6 +22,7 @@
                 android:id="@+id/thumbnail"
                 android:scaleType="centerCrop"
                 android:layout_width="match_parent"
+                android:transitionName="sharedElement"
                 android:layout_height="200dp" />
 
             <TextView
