--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -38,5 +38,15 @@
             android:id="@+id/navigation_item_8"
             android:icon="@mipmap/ic_launcher"
             android:title="CollapsingToolbarLayout"/>
+
+        <item android:title="롤리팝 전용">
+            <menu>
+                <group android:checkableBehavior="single">
+                    <item
+                        android:id="@+id/navigation_item_9"
+                        android:title="Transition"/>
+                </group>
+            </menu>
+        </item>
     </group>
 </menu>
