--- a/app/src/main/res/layout/fragment_collapsing.xml
+++ b/app/src/main/res/layout/fragment_collapsing.xml
@@ -19,8 +19,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/dmyo_2jpg_"
-                android:scaleType="centerCrop"
+                android:background="@drawable/pic300_7"
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
