--- a/app/src/main/res/layout/fragment_multichoice_list.xml
+++ b/app/src/main/res/layout/fragment_multichoice_list.xml
@@ -12,7 +12,7 @@
         android:choiceMode="multipleChoice" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/submit"
         android:text="Result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
