--- a/app/src/main/res/layout/fragment_login_facebook.xml
+++ b/app/src/main/res/layout/fragment_login_facebook.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.suwonsmartapp.hello.activity.FacebookLoginFragment">
+    tools:context="com.suwonsmartapp.hello.activity.fragment.FacebookLoginFragment">
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
