--- a/app/src/main/res/layout/fragment_navigation_drawer2.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer2.xml
@@ -3,4 +3,4 @@
     android:layout_height="match_parent" android:choiceMode="singleChoice"
     android:divider="@android:color/transparent" android:dividerHeight="0dp"
     android:background="#cccc"
-    tools:context="com.suwonsmartapp.hello.activity.NavigationDrawerFragment" />
+    tools:context="com.suwonsmartapp.hello.activity.fragment.NavigationDrawerFragment" />
