--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -44,6 +44,11 @@
             android:icon="@mipmap/ic_launcher"
             android:title="MultiChoiceListView"/>
 
+        <item
+            android:id="@+id/navigation_item_11"
+            android:icon="@mipmap/ic_launcher"
+            android:title="TextInputLayout"/>
+
         <item android:title="롤리팝 전용">
             <menu>
                 <group android:checkableBehavior="single">
